--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,3 +5,10 @@ $font-stack: Helvetica, Arial, sans-serif;
 body {
 	font-family: $font-stack;
 }
+
+.navbar-bg {
+	background-color: #000;
+}
+.navbar-namefont {
+	font-color: #e7e7e7;
+}
