Rewrote bootstrap classes in man.scss and replaced properties to change font color. I accomplished my objective but this doesn't feel like its the right thing to do.

--- a/css/main.css
+++ b/css/main.css
@@ -344,8 +344,8 @@ footer .footer-below {
 body {
   font-family: Helvetica, Arial, sans-serif; }
 
-.navbar-bg {
+.navbar-jmo {
   background-color: #000; }
 
-.navbar-namefont {
-  font-color: #e7e7e7; }
+.navbar-default .navbar-brand {
+  color: #e7e7e7; }
