--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,3 +13,25 @@ body {
 .navbar-default .navbar-brand {
 color: #e7e7e7;
 }
+
+header {
+	background: #fff;
+	color: #333333;
+}
+
+#portfolio {
+	background: #FFE919;
+}
+
+#about {
+	background: #14ADCC;
+}
+
+#contact {
+	background: #B21253;
+}
+
+footer .footer-above {
+padding-top: 50px;
+background-color: #30687C;
+}
