--- a/css/main.css
+++ b/css/main.css
@@ -17,10 +17,10 @@ a, a:hover, a:focus, a:active, a.active {
   color: #18bc9c; }
 
 h1, h2 {
-  font-family: Lobster, cursive; }
+  font-family: AmaticSC; }
 
 h3, h4, h5, h6 {
-  font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
   font-weight: 700; }
 
 hr.star-light, hr.star-primary {
@@ -35,8 +35,8 @@ hr.star-light:after, hr.star-primary:after {
   content: "\f005";
   display: inline-block;
   position: relative;
-  top: -0.8em;
-  padding: 0 0.25em;
+  top: -.8em;
+  padding: 0 .25em;
   font-family: FontAwesome;
   font-size: 2em; }
 
@@ -72,7 +72,7 @@ header img {
 
 header .intro-text .name {
   display: block;
-  font-family: Lobster, cursive;
+  font-family: AmaticSC;
   font-size: 2em;
   font-weight: 700; }
 
@@ -92,21 +92,21 @@ header .intro-text .skills {
 @media (min-width: 768px) {
   .navbar-fixed-top {
     padding: 25px 0;
-    -webkit-transition: padding 0.3s;
-    -moz-transition: padding 0.3s;
-    transition: padding 0.3s; }
+    -webkit-transition: padding .3s;
+    -moz-transition: padding .3s;
+    transition: padding .3s; }
   .navbar-fixed-top .navbar-brand {
     font-size: 2em;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    transition: all 0.3s; }
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    transition: all .3s; }
   .navbar-fixed-top.navbar-shrink {
     padding: 10px 0; }
   .navbar-fixed-top.navbar-shrink .navbar-brand {
     font-size: 1.5em; } }
 
 .navbar {
-  font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
   font-weight: 700; }
 
 .navbar a:focus {
@@ -154,9 +154,9 @@ section.success {
   height: 100%;
   opacity: 0;
   background: rgba(24, 188, 156, 0.9);
-  -webkit-transition: all ease 0.5s;
-  -moz-transition: all ease 0.5s;
-  transition: all ease 0.5s; }
+  -webkit-transition: all ease .5s;
+  -moz-transition: all ease .5s;
+  transition: all ease .5s; }
 
 #portfolio .portfolio-item .portfolio-link .caption:hover {
   opacity: 1; }
@@ -190,7 +190,7 @@ section.success {
   font-size: 20px;
   color: #fff;
   background: 0 0;
-  transition: all 0.3s ease-in-out; }
+  transition: all .3s ease-in-out; }
 
 .btn-outline:hover, .btn-outline:focus, .btn-outline:active, .btn-outline.active {
   border: solid 2px #fff;
@@ -200,7 +200,7 @@ section.success {
 .floating-label-form-group {
   position: relative;
   margin-bottom: 0;
-  padding-bottom: 0.5em;
+  padding-bottom: .5em;
   border-bottom: 1px solid #eee; }
 
 .floating-label-form-group input, .floating-label-form-group textarea {
@@ -221,15 +221,15 @@ section.success {
   position: relative;
   top: 2em;
   margin: 0;
-  font-size: 0.85em;
+  font-size: .85em;
   line-height: 1.76471em;
   vertical-align: middle;
   vertical-align: baseline;
   opacity: 0;
-  -webkit-transition: top 0.3s ease, opacity 0.3s ease;
-  -moz-transition: top 0.3s ease, opacity 0.3s ease;
-  -ms-transition: top 0.3s ease, opacity 0.3s ease;
-  transition: top 0.3s ease, opacity 0.3s ease; }
+  -webkit-transition: top .3s ease, opacity .3s ease;
+  -moz-transition: top .3s ease, opacity .3s ease;
+  -ms-transition: top .3s ease, opacity .3s ease;
+  transition: top .3s ease, opacity .3s ease; }
 
 .floating-label-form-group::not(:first-child) {
   padding-left: 14px;
@@ -323,7 +323,7 @@ footer .footer-below {
   cursor: pointer; }
 
 .portfolio-modal .close-modal:hover {
-  opacity: 0.3; }
+  opacity: .3; }
 
 .portfolio-modal .close-modal .lr {
   z-index: 1051;
