--- a/sass/_freelancer.scss
+++ b/sass/_freelancer.scss
@@ -1,4 +1,4 @@
-/*!
+                  /*!
  * Start Bootstrap - Freelancer Bootstrap Theme (http://startbootstrap.com)
  * Code licensed under the Apache License v2.0.
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
@@ -27,7 +27,7 @@ a.active {
 
 h1,
 h2 {
-    font-family: Lobster, cursive;
+    font-family: Amatic+SC;
 }
 
 
@@ -100,7 +100,7 @@ header img {
 
 header .intro-text .name {
     display: block;
-    font-family: Lobster, cursive;
+    font-family: Amatic+SC;
     font-size: 2em;
     font-weight: 700;
 }
