--- a/sass/_freelancer.scss
+++ b/sass/_freelancer.scss
@@ -1,4 +1,4 @@
-                  /*!
+/*!
  * Start Bootstrap - Freelancer Bootstrap Theme (http://startbootstrap.com)
  * Code licensed under the Apache License v2.0.
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
@@ -26,15 +26,12 @@ a.active {
 }
 
 h1,
-h2 {
-    font-family: Amatic+SC;
-}
-
-
+h2,
 h3,
 h4,
 h5,
 h6 {
+    text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
 }
@@ -100,7 +97,8 @@ header img {
 
 header .intro-text .name {
     display: block;
-    font-family: Amatic+SC;
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 2em;
     font-weight: 700;
 }
@@ -150,6 +148,7 @@ header .intro-text .skills {
 }
 
 .navbar {
+    text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
 }
