--- a/sass/_sections.scss
+++ b/sass/_sections.scss
@@ -1,5 +1,14 @@
 /* Sections
 =============================================== */
+header {
+	background-image: url('../images/homebgx1.jpg');
+	background-size: cover;
+	p {
+		font-size: 20px;
+		font-weight: 700;
+		margin-bottom: 2px;
+	}
+}
 
 #portfolio {
 	background: $portfolio-bg-color;
