--- a/css/main.css
+++ b/css/main.css
@@ -4599,9 +4599,6 @@ header {
   text-align: center;
   background: #fff;
   color: #333333; }
-  header .container {
-    padding-top: 100px;
-    padding-bottom: 50px; }
   header img {
     display: block;
     margin: 0 auto 20px; }
@@ -4609,9 +4606,6 @@ header {
     font-size: 1.25em; }
 
 @media screen and (min-width: 768px) {
-  header .container {
-    padding-top: 200px;
-    padding-bottom: 100px; }
   header .intro-text .skills {
     font-size: 1.75em; } }
 
@@ -4828,11 +4822,44 @@ form .row:first-child .floating-label-form-group {
 =============================================== */
 header {
   background-image: url('../images/homebgx1.jpg');
-  background-size: cover; }
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 300px;
+  margin-top: 50px; }
+  header .intro-text {
+    padding: 70px 0; }
   header p {
     font-size: 20px;
     font-weight: 700;
     margin-bottom: 2px; }
+
+@media screen and (max-width: 420px) {
+  header {
+    background-image: url('../images/homebg-sm.jpg'); } }
+
+@media screen and (min-width: 768px) {
+  header {
+    height: 500px;
+    margin-top: 100px; }
+    header .intro-text {
+      padding: 135px 0; }
+      header .intro-text .name {
+        font-size: 75px; }
+    header p {
+      font-size: 26px; } }
+
+@media screen and (min-width: 1200px) {
+  header {
+    height: 640px; }
+    header .intro-text {
+      padding: 190px 0; }
+      header .intro-text .name {
+        font-size: 100px; }
+    header p {
+      font-size: 30px;
+      font-weight: 700;
+      margin: 4px; } }
 
 #portfolio {
   background: #FFE919; }
