--- a/css/main.css
+++ b/css/main.css
@@ -4826,7 +4826,8 @@ header {
   background-position: center;
   background-repeat: no-repeat;
   height: 300px;
-  margin-top: 50px; }
+  margin-top: 50px;
+  margin-bottom: 20px; }
   header .intro-text {
     padding: 70px 0; }
   header p {
@@ -4861,11 +4862,88 @@ header {
       font-weight: 700;
       margin: 4px; } }
 
+#about {
+  background: #14ADCC;
+  padding-right: 20px;
+  padding-left: 20px;
+  padding-bottom: 150px; }
+  #about h2 {
+    font-size: 3em; }
+  #about .aboutbox {
+    margin-top: 20px;
+    padding: 20px 20px 70px 20px;
+    position: relative;
+    border: 2px solid #FFFFFF;
+    border-radius: 7px; }
+  #about .mypic {
+    position: absolute;
+    height: 200px;
+    background-color: #14ADCC;
+    bottom: -134px;
+    right: 55px; }
+    #about .mypic img {
+      height: 200px;
+      width: auto; }
+
+@media screen and (max-width: 330px) {
+  #about h2 {
+    font-size: 2.8em; }
+  #about .mypic {
+    right: 30px; } }
+
+@media screen and (min-width: 768px) {
+  #about {
+    padding-right: 30px;
+    padding-left: 30px;
+    padding-bottom: 220px; }
+    #about h2 {
+      font-size: 3.5em; }
+    #about p {
+      font-size: 20px; }
+    #about .aboutbox {
+      margin-top: 25px;
+      padding: 25px 25px 100px 25px;
+      border: 3px solid #FFFFFF; }
+      #about .aboutbox p {
+        font-size: 25px; }
+    #about .mypic {
+      bottom: -102px;
+      right: 225px; }
+      #about .mypic img {
+        height: 280px; } }
+
+@media screen and (min-width: 992px) {
+  #about {
+    padding-bottom: 260px; }
+    #about h2 {
+      font-size: 3.8em; }
+    #about p {
+      font-size: 25px; }
+    #about .aboutbox {
+      margin-top: 28px;
+      padding: 30px 30px 120px 30px; }
+      #about .aboutbox p {
+        font-size: 30px; }
+    #about .mypic {
+      bottom: -86px;
+      right: 310px; }
+      #about .mypic img {
+        height: 350px; } }
+
+@media screen and (min-width: 1200px) {
+  #about {
+    padding-bottom: 330px; }
+    #about .aboutbox {
+      margin-top: 40px;
+      padding: 50px 50px 150px 50px; }
+    #about .mypic {
+      bottom: -65px;
+      right: 372px; }
+      #about .mypic img {
+        height: 400px; } }
+
 #portfolio {
   background: #FFE919; }
-
-#about {
-  background: #14ADCC; }
 
 #contact {
   background: #B21253; }
