--- a/sass/_sections.scss
+++ b/sass/_sections.scss
@@ -65,6 +65,7 @@ header {
 // ABOUT
 #about {
 	background: $about-bg-color;
+	color: #FFFFFF;
 	padding-right: 20px;
 	padding-left: 20px;
 	padding-bottom: 150px;
