--- a/css/main.css
+++ b/css/main.css
@@ -4961,4 +4961,25 @@ header {
     padding: 10px; } }
 
 #contact {
-  background: #B21253; }
+  background: #B21253;
+  color: #FFFFFF; }
+  #contact .social a:focus {
+    outline: 0; }
+  #contact .social img {
+    width: 50px;
+    margin: 15px 6px; }
+
+@media screen and (min-width: 480px) {
+  #contact .social img {
+    width: 76px;
+    margin: 15px 12px; } }
+
+@media screen and (min-width: 768px) {
+  #contact .social img {
+    width: 96px;
+    margin: 15px; } }
+
+@media screen and (min-width: 992px) {
+  #contact .social img {
+    width: 116px;
+    margin: 20px; } }
