--- a/sass/_sections.scss
+++ b/sass/_sections.scss
@@ -219,4 +219,39 @@ header {
 // CONTACT
 #contact {
 	background: $contact-bg-color;
+	color: #FFFFFF;
+
+	.social {
+		a:focus {
+			outline: 0;
+		}
+		img {
+			width: 50px;
+			margin: 15px 6px;
+		}
+	}
+}
+@media screen and (min-width: $screen-xs-min) {
+	#contact {
+		.social img {
+			width: 76px;
+			margin: 15px 12px;
+		}
+	}
+}
+@media screen and (min-width: $screen-sm-min) {
+	#contact {
+		.social img {
+			width: 96px;
+			margin: 15px;
+		}
+	}
+}
+@media screen and (min-width: $screen-md-min) {
+	#contact {
+		.social img {
+			width: 116px;
+			margin: 20px;
+		}
+	}
 }
