--- a/sass/_sections.scss
+++ b/sass/_sections.scss
@@ -180,6 +180,13 @@ header {
 	}
 }
 
+
+//SKILLS
+
+.bear {
+	margin-bottom: -75px;
+}
+
 // PORTFOLIO
 #portfolio {
 	background: $portfolio-bg-color;
