--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,7 +19,7 @@ $font-size-h1: floor(($font-size-base * 3.1)); // ~55px
 $font-size-h2: floor(($font-size-base * 2.15)) !default; // ~30px
 $navbar-default-bg: #000;
 $navbar-default-brand-color: #e7e7e7;
-
+$font-family-special: Boogaloo, Helvetica, Arial, sans-serif;
 
 /* Bootstrap
 =============================================== */
