--- a/css/main.css
+++ b/css/main.css
@@ -5028,7 +5028,15 @@ header {
     height: 110px; } }
 
 #portfolio {
-  background: #FFE919; }
+  background: #FFE919;
+  padding-left: 20px;
+  padding-right: 20px; }
+  #portfolio h2 {
+    font-size: 2.8em; }
+  #portfolio .bacon {
+    height: 147px;
+    margin-top: 18px;
+    margin-bottom: 28px; }
   #portfolio .project {
     margin-bottom: 60px; }
     #portfolio .project .project-img {
@@ -5044,8 +5052,32 @@ header {
         font-size: 12px; }
 
 @media screen and (min-width: 768px) {
+  #portfolio h2 {
+    font-size: 3.5em; }
+  #portfolio p {
+    font-size: 20px; }
+  #portfolio .bacon {
+    height: 200px;
+    margin-top: 20px;
+    margin-bottom: 30px; }
   #portfolio .project .project-img {
     padding: 10px; } }
+
+@media screen and (min-width: 992px) {
+  #portfolio h2 {
+    font-size: 3.8em; }
+  #portfolio p {
+    font-size: 25px; }
+  #portfolio .bacon {
+    height: 250px;
+    margin-top: 25px;
+    margin-bottom: 35px; } }
+
+@media screen and (min-width: 1200px) {
+  #portfolio .bacon {
+    height: 280px;
+    margin-top: 30px;
+    margin-bottom: 40px; } }
 
 #contact {
   background: #B21253;
