--- a/sass/_sections.scss
+++ b/sass/_sections.scss
@@ -343,6 +343,16 @@ header {
 // PORTFOLIO
 #portfolio {
 	background: $portfolio-bg-color;
+	padding-left: 20px;
+	padding-right: 20px;
+	h2 {
+		font-size: 2.8em;
+	}
+	.bacon {
+		height: 147px;
+		margin-top: 18px;
+		margin-bottom: 28px;
+	}
 
 	.project {
 		margin-bottom: 60px;
@@ -366,12 +376,49 @@ header {
 		}
 	}
 }
-@media screen and (min-width: $screen-sm-min) {
+@media screen and (min-width: $screen-sm-min) { //768
 	#portfolio {
+		h2 {
+			font-size: 3.5em;
+		}
+		p {
+			font-size: 20px;
+		}
+		.bacon {
+			height: 200px;
+			margin-top: 20px;
+			margin-bottom: 30px;
+		}
 		.project {
 			.project-img {
 				padding: 10px;
 			}
+		}
+	}
+}
+
+@media screen and (min-width: $screen-md-min) { //992px
+	#portfolio {
+		h2 {
+			font-size: 3.8em;
+		}
+		p {
+			font-size: 25px;
+		}
+		.bacon {
+			height: 250px;
+			margin-top: 25px;
+			margin-bottom: 35px;
+		}
+	}
+}
+
+@media screen and (min-width: $screen-lg-min) { //1200px
+	#portfolio {
+		.bacon {
+			height: 280px;
+			margin-top: 30px;
+			margin-bottom: 40px;
 		}
 	}
 }
